Alien Greenfoot/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Greenfoot\jdk\bin\javadoc.exe
-sourcepath
C:\Users\Bakti Pratama\Downloads\PROJEK ALIEN1\OOP_BAKTIPRATAMA_026-main\PROJEK1ALIEN
-source
11
-classpath
C:\Program Files\Greenfoot\lib\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-console-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\Greenfoot\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\classgraph-4.8.90.jar;C:\Program Files\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\Greenfoot\lib\xom-1.3.7.jar;C:\Program Files\Greenfoot\lib\lang-stride.jar;C:\Program Files\Greenfoot\lib\nsmenufx-2.1.8.jar;C:\Program Files\Greenfoot\lib\wellbehavedfx-0.3.3.jar;C:\Program Files\Greenfoot\lib\guava-17.0.jar;C:\Program Files\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\Greenfoot\lib\httpmime-4.1.1.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\Bakti Pratama\Downloads\PROJEK ALIEN1\OOP_BAKTIPRATAMA_026-main\PROJEK1ALIEN
-d
C:\Users\Bakti Pratama\Downloads\PROJEK ALIEN1\OOP_BAKTIPRATAMA_026-main\PROJEK1ALIEN\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
PROJEK1ALIEN
-windowtitle
PROJEK1ALIEN
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
C:\Users\Bakti Pratama\Downloads\PROJEK ALIEN1\OOP_BAKTIPRATAMA_026-main\PROJEK1ALIEN/Alien.java
C:\Users\Bakti Pratama\Downloads\PROJEK ALIEN1\OOP_BAKTIPRATAMA_026-main\PROJEK1ALIEN/Laser.java
C:\Users\Bakti Pratama\Downloads\PROJEK ALIEN1\OOP_BAKTIPRATAMA_026-main\PROJEK1ALIEN/Hiro.java
C:\Users\Bakti Pratama\Downloads\PROJEK ALIEN1\OOP_BAKTIPRATAMA_026-main\PROJEK1ALIEN/MyWorld.java
<---- end of javadoc command ---->
Loading source file C:\Users\Bakti Pratama\Downloads\PROJEK ALIEN1\OOP_BAKTIPRATAMA_026-main\PROJEK1ALIEN\Alien.java...
Loading source file C:\Users\Bakti Pratama\Downloads\PROJEK ALIEN1\OOP_BAKTIPRATAMA_026-main\PROJEK1ALIEN\Laser.java...
Loading source file C:\Users\Bakti Pratama\Downloads\PROJEK ALIEN1\OOP_BAKTIPRATAMA_026-main\PROJEK1ALIEN\Hiro.java...
C:\Users\Bakti Pratama\Downloads\PROJEK ALIEN1\OOP_BAKTIPRATAMA_026-main\PROJEK1ALIEN\Hiro.java:45: error: ')' expected
             getY+5;
                   ^
C:\Users\Bakti Pratama\Downloads\PROJEK ALIEN1\OOP_BAKTIPRATAMA_026-main\PROJEK1ALIEN\Hiro.java:47: error: illegal start of expression
             )
             ^
Loading source file C:\Users\Bakti Pratama\Downloads\PROJEK ALIEN1\OOP_BAKTIPRATAMA_026-main\PROJEK1ALIEN\MyWorld.java...
2 errors
